<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/home"
    android:padding="16dp">

    <!-- Categories Button Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp">

        <Button
            android:id="@+id/categoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_button"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/Violet"/>

        <Button
            android:id="@+id/offersButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offers_button"
            android:textColor="@android:color/white"
            android:layout_marginStart="8dp"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/Violet"/>
    </LinearLayout>

    <!-- Welcome Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <!-- RecyclerView for Products -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:padding="8dp" />
</LinearLayout>
